# continualUtils

./: .env  .gitattributes  .gitignore  Dockerfile  README.md  bump.py  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: main.yml
benchmarks/: clickme.py
benchmarks/datasets/: clickme.py
continualUtils/: _version.py
continualUtils/benchmarks/: __init__.py  clickme.py
continualUtils/benchmarks/datasets/: clickme.py  preprocess.py
continualUtils/evaluation/: __init__.py  harmonizer_metrics.py  learing_rate_metrics.py  saliency_map_metrics.py  step_epoch_metrics.py
continualUtils/explain/: __init__.py  harmonizer_plugin.py  lwm_plugin.py  saliency_map.py
continualUtils/explain/tools/: __init__.py  grad_cam.py  harmonizer_loss.py  lwm_loss.py  pyramidal.py  saliency_map.py  total_variation_loss.py  utils.py
continualUtils/hyperparameters/: cosine_lr.py
continualUtils/models/: __init__.py  base.py  cnn.py  resnet18.py  resnet34.py  resnet50.py  vit.py
continualUtils/security/: adversarial.py
continualUtils/security/tools/: universal_adversarial_perturbation.py
continualUtils/training/: harmonizer.py
continualUtils/training/losses/: __init__.py  harmonizer_loss.py  utils.py
fake_imagenet/: make_fake_imagenet.py
models/: base.py  cnn.py  resnet18.py  resnet50.py  vit.py
tests/: conftest.py  run_tests.py  test_adversarial.py  test_benchmarks.py  test_dataset.py  test_datasets.py  test_explain.py  test_models.py
tests/visual_notebooks/: compare_maps.ipynb  visual_pyramidal.ipynb
training/: harmonizer.py
training/losses/: harmonizer_loss.py
