[tool.poetry]
name = "continualUtils"
version = "0.0.2.post29.dev0+c9c79e2"
description = "Additional functionalities that just work with Avalanche"
license = "MIT"
authors = ["Nishant S. Aswani <nishantaswani@nyu.edu>"]
readme = "README.md"
packages = [{include = "continualUtils"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
avalanche-lib = { git = "https://github.com/ContinualAI/avalanche", rev = "12f37f8"}
transformers = "^4.35"

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
torch = {version = ">=2.1.0", source = "torch"}
torchvision = {version = "*", source = "torch"}
torchaudio = {version = "*", source = "torch"}
pylint = "^3.0.0"
ffcv = "*"
cupy-cuda11x = "*"
numba = "*"
tbb = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
datasets = "^2.14.5"
pytest = "^7.4"
grad-cam = "^1.4.8"
opencv-python-headless = "*"
ipytest = "*"
torchviz = "^0.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[tool.poetry.scripts]
devtest = "tests.run_tests:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "continualUtils", files = ["_version.py"] }
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
log_cli = true

[tool.pylint.main]
# List of members which are set dynamically and missed by pylint inference
# system, and so shouldn't trigger E1101 when accessed. Python regular
# expressions are accepted.
generated-members = "torch.*, avalanche.*"
disable = "c0114, r0913, w0212, e1101, e1102" # disable missing-module-docstring, too many arguments

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"